--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>cse131-s18-students</name>
+	<name>cse131-s18-Xue-457955</name>
 	<comment></comment>
 	<projects>
 	</projects>
